syntax = "proto3";

option go_package = "./api";

// ------------ Objects ------------
message ObjectRequest {
  string objectId = 1;
}

message ObjectResponse {
  string id = 1;
  string name = 2;
  int64 x = 3;
  int64 y = 4;
}

// ------------ Login ------------
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string authToken = 1;
  repeated ObjectResponse objects = 2;
}

// ------------ Action ------------
message ActionRequest {
  string token = 1;
  enum ActionType {
    SCAN = 0;
    SHOOT = 1;
    CONTACT = 2;
  }
  ActionType corpus = 2;
}

message ActionResponse {
  repeated ObjectResponse objects = 2;
}

// ------------ Handler ------------
service Handler {
  rpc FetchInfos(ObjectRequest) returns (ObjectResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Action(ActionRequest) returns (ActionResponse);
}
